# AI-Mafia

./: .dockerignore  .env.example  .gitignore  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt
agents/: __init__.py  llm_config.py  mafia_agent.py  models.py  orchestrator.py  prompts.py
api/: game_store.py  main.py  models.py
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  llmOptions.ts  tts.ts  types.ts
frontend/src/components/: CreateGameForm.tsx  GameView.tsx  Settings.tsx
game/: __init__.py  engine.py  rules.py  state.py
tests/: test_api.py  test_engine.py
